<?xml version="1.0"?>
<package>
  <name>triplet_graph</name>
  <version>0.0.0</version>
  <description>The triplet_graph package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rokusottervanger@gmail.com">Rokus Ottervanger</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geolib2</build_depend>
  <build_depend>tue_config</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geolib2</run_depend>
  <run_depend>tue_config</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
